2A/05_Projet_GL/src/test/deca/codegen/valid/SansObjet/34_unary_minus_int.deca
// Description:
//    Programme avec entiers relatifs
// Resultats:
//    -2
//    -5
//
// Historique:
//    cree le 10/1/2024

{
    int a = -5, b = 5, c = -2;
    println(a+b+c);
    printx(a);
}
