2A/05_Projet_GL/src/test/deca/codegen/invalid/sansObjet/04_mod_zero.deca
// Description:
//    Programme avec modulo par 0
// Resultats:
//    Erreur : Reste de la division entière par 0
//
// Historique:
//    cree le 10/1/2024

{
    int x = 5%0;
    println(x);
}